# memes_api

./: .gitignore  Makefile  README.md
api/: Dockerfile  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 011585b002ae_init.py
api/core/: .env  config.py
api/core/models/: __init__.py  db_helper.py  meme.py
api/docker_compose/: app.yaml  storage.yaml
api/memes/: crud.py  dependencies.py  memes.py  schemas.py
api/tests/: test_main.py
media/: .env  Dockerfile  config.py  crud.py  main.py  pyproject.toml  requirements.txt
media/docker_compose/: media.yaml  s3.yaml
